# GreatReads

./: .augment-guidelines  .gitignore  CLAUDE.md  GREATREADS_INTEGRATION.md  GREATREADS_MERGE_PLAN.md  GREATREADS_MERGE_SCOPING.md  GreatReads.code-workspace  OFFLINE_PLAN.md  README.md  RECOVERY.md  build-app.sh
.claude/: settings.json
assets/: README.md
backend/: app.py  build_summaries.py  match_audit.py  requirements.txt  (+2 more)
greatreads/: Dockerfile  VENDORED_FROM.md  docker-compose.ereader.yml  pyproject.toml
greatreads/scripts/: backup-db.sh  purge_boilerplate_covers.sh
greatreads/src/greatreads/: database.py  ereader_api.py  main.py
greatreads/src/greatreads/discovery/: google_books_client.py  itunes_client.py  openlibrary_client.py
greatreads/src/greatreads/models/: book.py  book_contributor.py  event_log.py  news_item.py  reading.py
greatreads/src/greatreads/routes/: _book_enrich.py  books.py  enrichment.py  events.py  import_routes.py  libby.py  library.py  news.py  readings.py  stats.py
greatreads/src/greatreads/services/: chain_calculator.py  contributor_service.py  cover_upgrade_service.py  event_log_service.py  format_dominance.py  import_service.py  libby_autofulfill_service.py  metadata_backfill_service.py  metadata_enrichment_service.py  news_service.py  sync_service.py
greatreads/src/greatreads/static/css/: style.css
greatreads/src/greatreads/static/js/: app.js  book_edit.js  bulk_edit.js  libby_check.js
greatreads/src/greatreads/templates/: _book_edit_modal.html  _bulk_edit_modal.html  _edit_reading_modal.html  base.html  books.html  highlights.html  index.html  journal.html  library.html  logs.html  news.html  settings.html  stats.html  tbr.html
(+45 files in other folders)
