[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greatreads"
version = "2.1.7"
description = "GreatReads - Interactive Reading Tracker"
authors = [
    {name = "Brandon Bell", email = "bbell.primary@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "python-dateutil>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",  # Ereader catalog/cover/HLS calls absorbed from :8091 (#22)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
greatreads = "greatreads.main:main"
greatreads-server = "greatreads.server:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["greatreads"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "2.1.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
